fix: :lipstick: Use overflow-wrap anywhere for long link wrapping.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,8 +43,7 @@
   }
 
   .prose :where(a, p, li) {
-    overflow-wrap: break-word;
-    word-break: break-word;
+    overflow-wrap: anywhere;
   }
 
   .prose :where(span[data-rehype-pretty-code-figure]) > code {
